MobileApp/www/css/style.css
/* ... */
.IonList .label
{
    color: #000 !important;
    text-align: left !important;
}
.ver-center
{
  display: flex !important;
  align-content: center !important;
  align-items: center !important;
}
.remove .item-md.item-block .item-inner
{
  display: none;
}
.popover-md .popover-content
{
  /*
  top: 90px !important;
  left: 100px !important;
  padding: 0;
  width: 250px !important;
  padding-right: 10px !important;
  */
}
.lable-clr .label
{
  color:#000000;
}
.list-ios [col-6],.content-ios [col-6]
{
  width: 49% !important;
  max-width: 49% !important;
}
.content-ios [col-8]
{
  width:65% !important;
  max-width: 65% !important;
}
.content-ios [col-9]
{
   width: 74% !important;
   max-width: 74% !important;
}

/* ion scroll  */
ion-scroll[scrollX] {
    white-space: nowrap;
    height: 65px;
    overflow: hidden;

    .scroll-item {
      display: inline-block;
    }

    .selectable-icon{
      margin: 10px 20px 10px 20px;
      color: red;
      font-size: 100px;
    }

    ion-avatar img{
      margin: 10px;
    }
  }

  ion-scroll[scroll-avatar]{
    height: 60px;
  }

  /* Hide ion-content scrollbar */
  ::-webkit-scrollbar{
    display:none;
  }


button.pop-icon
{
      border: 1px solid #FFC107 !important;
      border-radius: 50% !important;
      padding: 15px !important;
}



.hariz-scroll-con
{
  /*padding:10px 15px;*/
 /* width: 1400px;*/
}
.font-size12 p
{
  font-size:12px;
}



/* calendar css */
.Viewcalendartxt h2
{
     font-size: 18px;
     padding-left: 10px;
}
#fullCalendarCon .fc-unthemed .fc-today {
    background: #F44336 !important;
    color: #fff !important;
}
#fullCalendarCon .fc-toolbar h2
{
      font-size: 18px !important;
      margin-bottom: 5px;
}
#fullCalendarCon .fc-toolbar .fc-left {
    float: none;
    display: block;
}
#fullCalendarCon .fc-toolbar .fc-right
{
     margin-top: 14px;
}
.fc button, .fc button:hover, .fc button:focus, .fc button:active, .fc button.active, .fc button:active:focus, .fc button:active:hover, .fc button.active:focus, .fc button.active:hover, .open>.fc button.dropdown-toggle, .open>.fc button.dropdown-toggle:focus, .open>.fc button.dropdown-toggle:hover, .fc button.btn-primary, .fc button.btn-primary:hover, .fc button.btn-primary:focus, .fc button.btn-primary:active, .fc button.btn-primary.active, .fc button.btn-primary:active:focus, .fc button.btn-primary:active:hover, .fc button.btn-primary.active:focus, .fc button.btn-primary.active:hover, .open>.fc button.btn-primary.dropdown-toggle, .open>.fc button.btn-primary.dropdown-toggle:focus, .open>.fc button.btn-primary.dropdown-toggle:hover
{
    background-color: #ff9800;
}

.icon-right
{
  padding-right:5px;
  float:right;
}
.margin-top5
{
  margin-top:5px !important;
}
.segment-md-clr-blue .segment-button
{
  border-bottom-color: #00bcd4;
}
.round
{
  background-color: #FFFFFF !important;
}
.bg-grey
{
  background-color:#EEEEEE !important;
}
.clr-orange
{
  color: #ff9800;
}
.clr-black
{
  color: #444;
}
.padding-top0
{
  padding-top: 0 !important;
}
.table-sales
{
  margin-top: 0 !important;
}
.padding-right2
{
  padding-right: 2px;
}
.padding-left2
{
  padding-left: 2px;
}
.white-bg
{
  background-color: #FFFFFF;
}
table tr
{
  height:calc(100vh-85vh);
}
.fnt-18
{
  font-size: 18px;
}
.fnt-25
{
  font-size: 25px;
}
.Nametxt
{
      text-align: center;
      padding: 0;
      width: 65px;
      font-size: 10px;
      height: 65px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
}
.red
{
  color: red;
}
.green
{
  color: green;
}
.blue
{
  color: deepskyblue;
}
.padding-bottom0
{
  padding-bottom:0 !important;
}
.padding-right0
{
  padding-right: 0 !important;
}
.padding-left0
{
  padding-left: 0 !important;
}
.card
{
  margin: 5px 0 15px 0 !important;
}
.segment-button.segment-activated
{
  background-color: #191919 !important;
}

.segment-md .segment-button
{
  color: orange !important;
}
.clr-red
{
  color:#f53d3d;
}
.red-card
{
  box-shadow: 0 1px 4px 0 rgb(255, 0, 0) !important;
}
.green-card
{
  box-shadow: 0 1px 4px 0 rgb(0, 255, 0) !important;
}
.blue-card
{
  box-shadow: 0 1px 4px 0 deepskyblue !important;

}
.padding10
{
  padding: 10px;
}
.emp-list .item-block .item-inner
{
    border-bottom: 0 !important;
}
.emp .item-inner
{
    border-bottom: 0 !important;
}
.emp-round
{
  width: 40px;
  height: 40px;
  border-radius:50%;
  background-color: #000000;
  margin: 0 auto !important;
}
.emp-round p
{
  font-weight:bold;
  color:#ff9800 !important;
  text-align: center !important;
  vertical-align: middle !important;
  line-height: 38px !important;
      font-size: 14px;
}
.emp-round-active
{
  background-color: #ff9800 !important;
}
.emp-round-active p
{
  color: #000000 !important;
}
.width-round
{
  width: 40px;
  height: 40px;
}
.width-round img
{
  border-radius: 50% !important;
}
.align-right
{
  float: right;
}
.add-btn
{
  width: 40px;
  color: orange !important;
  font-size: 20px !important;
}
.select-box
{
  max-width:100%;
  border-bottom: 1px solid #dedede;
}
.camera-btn
{
  background-color: orange;
  color: #FFFFFF;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  font-size: 20px;
  line-height: 25px;
}
.line-height
{
  line-height:35px;
}
.margin-bottom25
{
  margin-bottom:25px !important;
}
.margin-bottom5
{
  margin-bottom: 5px;
}
.content-md
{
  background-color:#EEEEEE !important;
}
.width98
{
  width:98%;
}
.margin-side-auto
{
  margin-left: auto !important;
  margin-right: auto !important;
}


.item-label .label-md
{
  margin: 0 !important;
}
.radio-label
{
  color: black;
  text-align: left;
}
.width50
{
  width: 50% !important;
}
.inline-block
{
  display: inline-block !important;
}

.select-rate {
  position: absolute;
}
.table>thead>tr>th
{
  font-size:14px !important;
}
.padding-bottom3
{
  padding-bottom: 3px !important;
}
.width15
{
  width: 15px !important;
}
.table-scroll
{
  width: 500px;
  overflow-x: scroll;
}
.width100
{
  width: 100px;
}
/* ... */

